# calendar_bot

./: .gitignore  COPYING.md  Cargo.toml  LICENSE.MIT  LICENSE.md
src/: main.rs
src/cal/: interval.rs  mod.rs
