[package]
name = "calendar_bot"
version = "0.1.0"
authors = ["Collin Baker <chbaker0@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1.1.3"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.1.26"
itertools = "0.8.0"
lazy_static = "1.3.0"
reqwest = "0.9.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.0.7"
